[tool.poetry]
name = "studyfast"
version = "0.1.0"
description = ""
authors = ["VinylStage <mcpe9869@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
httpx = "^0.27.2"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
